Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/VarNotFound.ru
/? Caso de prueba en donde se intenta acceder a una variable que no existe
/? Salida esperada:
/? ERROR: SEMÁNTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 8 | COLUMNA 5 | VARIABLE NO DEFINIDA


start{
Int a;
Bool b;
a = x;}